[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/hostiles/BearChicken/images/waiting.png" type="Texture" id=1]
[ext_resource path="res://src/hostiles/BearChicken/images/running_2.png" type="Texture" id=2]
[ext_resource path="res://src/hostiles/BearChicken/images/running_1.png" type="Texture" id=3]
[ext_resource path="res://src/hostiles/BearChicken/images/attacking_2.png" type="Texture" id=4]
[ext_resource path="res://src/hostiles/BearChicken/images/attacking_1.png" type="Texture" id=5]
[ext_resource path="res://src/hostiles/BearChicken/BearChicken.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "waiting",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "running",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "attacking",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 40.5379

[sub_resource type="CircleShape2D" id=3]
radius = 500.0

[sub_resource type="CircleShape2D" id=4]
radius = 84.4012

[node name="bear_chicken" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 6 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 7.02469, -34.0426 )
frames = SubResource( 1 )
animation = "waiting"
playing = true

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="detection_area" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource( 3 )

[node name="attack_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="attack_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="collision" type="CollisionShape2D" parent="attack_area"]
shape = SubResource( 4 )
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attack_area" to="." method="_on_attack_area_body_exited"]
